--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  
 <!---------------------------------------------------------------------------------------------------------------->
 <head>
     <meta charset="UTF-8">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="./css/gui.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
+
 <!---------------------------------------------------------------------------------------------------------------->
 <script type="module">
     import {appInstance} from "./js/app.js"
@@ -18,6 +20,8 @@
 </script> 
 <!---------------------------------------------------------------------------------------------------------------->
 <body>
+  
+    
     <nav class="navbar navbar-light bg-light">
     <button id="btnToggleDrawer" class="navbar-toggler" type="button">
       <span class="navbar-toggler-icon"></span>
@@ -34,7 +38,9 @@
     <h1>Catracas EtecZL</h1>
     <p>Controle de Acesso: Catracas EtecZL.</p>
   </div>
-
+<div>
+  
+</div>
 
   <div id="menuDrawer" class="drawer container border border-primary-subtle rounded-end">
     <div class="container border border-primary-subtle rounded-end">    
