--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,16 @@
 <body>
   
     
-    <nav class="navbar navbar-light bg-light">
-    <button id="btnToggleDrawer" class="navbar-toggler" type="button">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">EtecZl</a>
+  <nav class="navbar navbar-light bg-light">
+    <div>
+        <button id="btnToggleDrawer" class="navbar-toggler mx-2" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">EtecZl</a>
+    </div>
     <div id="installPwaWebAPP"></div>
-    <div id="user_identification_div" class="d-flex">
-      <i class="bi bi-person-circle"></i>
+    <div id="user_identification_div" class="d-flex mx-3">
+      <i class="bi bi-person-circle mx-2"></i>
       <a class="nav-link" href="#">User Name</a>
     </div>
   </nav>
@@ -38,9 +40,6 @@
     <h1>Catracas EtecZL</h1>
     <p>Controle de Acesso: Catracas EtecZL.</p>
   </div>
-<div>
-  
-</div>
 
   <div id="menuDrawer" class="drawer container border border-primary-subtle rounded-end">
     <script id="DrawerMenuTemplate" type="text/template">
